--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "nuxt": "^3.12.3",
+    "@nuxtjs/tailwindcss": "6.12.1",
+    "nuxt": "3.12.3",
+    "tailwindcss": "3.4.6",
     "vue": "latest"
   }
 }
