--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "6.12.1",
+    "@nuxt/image": "1.7.0",
     "nuxt": "3.12.3",
     "tailwindcss": "3.4.6",
-    "vue": "latest"
+    "vue": "latest",
+    "nuxt-icon": "^0.6.8"
   }
 }
