--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "6.12.1",
     "@nuxt/image": "1.7.0",
+    "@nuxtjs/tailwindcss": "6.12.1",
     "nuxt": "3.12.3",
+    "nuxt-icon": "^0.6.8",
     "tailwindcss": "3.4.6",
-    "vue": "latest",
-    "nuxt-icon": "^0.6.8"
+    "vue": "latest"
   }
 }
