--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "3.12.3",
     "nuxt-icon": "^0.6.8",
     "tailwindcss": "3.4.6",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-lite-youtube-embed": "^1.2.4"
   }
 }
