--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/image": "1.7.0",
     "@nuxtjs/tailwindcss": "6.12.1",
+    "@vercel/analytics": "^1.3.1",
     "nuxt": "3.12.3",
     "nuxt-icon": "^0.6.8",
     "tailwindcss": "3.4.6",
